[gd_scene load_steps=5 format=2]

[ext_resource path="res://MovingPlatform.gd" type="Script" id=1]
[ext_resource path="res://Asset/InteractableThings/Tile Cosi copy.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 31.8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 89, 38 )

[node name="MovingPlatform" type="Node2D"]
script = ExtResource( 1 )

[node name="MPlatform" type="KinematicBody2D" parent="."]
z_index = 1
collision_layer = 16385
collision_mask = 16385

[node name="Sprite" type="Sprite" parent="MPlatform"]
scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="MPlatform"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 1 )

[node name="StopArea" type="Area2D" parent="MPlatform"]
collision_layer = 16
collision_mask = 16

[node name="StopCollision" type="CollisionShape2D" parent="MPlatform/StopArea"]
position = Vector2( 0, 12 )
scale = Vector2( 1, 0.5 )
shape = SubResource( 2 )

[node name="MoveTween" type="Tween" parent="."]
repeat = true
playback_process_mode = 0
playback/repeat = true

[connection signal="body_entered" from="MPlatform/StopArea" to="." method="_on_StopArea_body_entered"]
[connection signal="body_exited" from="MPlatform/StopArea" to="." method="_on_StopArea_body_exited"]
